--- a/project/composer.json
+++ b/project/composer.json
@@ -21,7 +21,9 @@
         "drupal/core-composer-scaffold": "10.0.8",
         "drupal/core-project-message": "10.0.8",
         "drupal/core-recommended": "10.0.8",
+        "drupal/default_content_deploy": "^2.0",
         "drupal/devel": "^5.1",
+        "drupal/paragraphs": "^1.15",
         "drush/drush": "^11.5"
     },
     "conflict": {
